--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ language: node_js
 node_js:
 - 6.1.0
 script: npm run dist
+cache:
+  directories:
+    - node_modules
+    - $HOME/.electron
+    - "test/fixtures/app-executable-deps/app/node_modules"
 deploy:
   provider: releases
   skip_cleanup: true
