--- a/package.json
+++ b/package.json
@@ -13,6 +13,17 @@
     "productName": "Perlotto",
     "mac": {
       "category": "public.app-category.music"
+    },
+    "linux": {
+      "target": "snap"
+    },
+    "snap": {
+      "plugs": [
+        "default"
+      ],
+      "after": [
+        "desktop-gtk2"
+      ]
     }
   },
   "repository": {
@@ -31,6 +42,6 @@
   },
   "devDependencies": {
     "electron": "^1.6.11",
-    "electron-builder": "^6.6.1"
+    "electron-builder": "^19.50.0"
   }
 }
